<resources>
    <string name="app_name">AAYU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="Registration">Register</string>
    <string name="welcomelabel">Mobile app development is the act or process by which a mobile app is developed for mobile devices, such as personal digital assistants, enterprise digital assistants or mobile phones. These applications can be pre-installed on phones during manufacturing platforms, or delivered as web applications using server-side or client-side processing  to provide an "application-like" experience within a Web browser.</string>
    <string name="phone">Phone</string>
    <string name="Health">Aid</string>
    <string name="account">Profile</string>
    <string name="settings">Account</string>
    <string name="mdmuneer">md_muneer313</string>
    <string name="afreed">Afreed99</string>
    <string name="About">
To design an application that helps the user to find the best suitable hospital for medication.
    </string>
    <string name="Introduction">
        Usually many lives are lost due to the time taken for shifting a patient from one hospital to another hospital because of lack of necessary equipment. The existing systems do not provide any information about the availability of equipment of all the hospitals present. There are individual systems of hospitals that show the information about their specific hospital.
    </string>
    <string name="conclusion">
        Present health care system doesn’t not consist of any medium to know all the information of different hospitals. We have conducted a survey and found that it is required by the people to know information about different hospitals and the equipment present in them so that they can choose appropriate hospital for treatments. It also helps in getting information of medicines and steps to follow in emergency situations.
    </string>

    <string name="lictext">Life Insurance Corporation of India (LIC) is one of the oldest state-owned insurance Companies in India.
       </string>
    <string name="vimsdetails">Vims Hospital in Bellary Ho, Bellary has a well-equipped clinic with all the modern equipment. The clinic has separate waiting and consultation areas which allow enough space for patients to wait conveniently at the clinic. Being a specialized Hospitals, the doctor offers a number of medical services. The clinic is operational between 00:00 - 23:59.</string>

    <string name="description">AAYU \'s Hospital’s main campus is located in the heart of the city. In addition, a number of programs function outside the actual Hospital, including the Early Intervention Program and the Dan Marino Center for developmental disorders. Interns are provided office space at Nicklaus Children\'s Hospital. Psychological assessment materials and computer assisted scoring programs are available. Interns have access to computers, audiovisual and library facilities within the Hospital. A number of areas are devoted to special functions that serve the training programs. Evaluation and therapy rooms are designed for patient evaluations, treatment, clinical interviews and counseling.</string>
</resources>



