<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkTheme"
    tools:context=".MainActivity">


   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="AYU"
       android:layout_marginTop="150dp"
       android:textColor="@color/GreenBack"
       android:textSize="129dp"
       android:textAlignment="center"
       android:fontFamily="@font/indigo_daisy"/>


    <Button
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10pt"
        android:id="@+id/loginbutton"
        android:background="@drawable/btn_custom"
        android:text="@string/login" />

    <Button
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:id="@+id/registerbutton"
        android:layout_marginTop="410dp"
        android:background="@drawable/btn_custom"
        android:text="@string/Registration" />

    <TextView
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginTop="490dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/welcomelabel"
        android:textAlignment="center"
        android:textColor="@color/GreenBack"
        android:textSize="20dp" />
</RelativeLayout>